Добавлен endpoint POST game
