# internal/module/game/handler/create.go
@@ -10,35 +10,33 @@ import (
 	sharedResponse "github.com/Brotiger/per-painted_poker-backend/internal/shared/response"
 	"github.com/Brotiger/per-painted_poker-backend/internal/validator"
 	"github.com/gofiber/fiber/v2"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
 // @Summary Игра
 // @Tags Game
-// @Router /game [get]
+// @Router /game [post]
 // @Produce json
-// @Param request query request.List false "Query params"
-// @Success 200 {object} response.List "Успешный ответ."
+// @Param request body request.Create false "Body params"
+// @Success 200 {object} response.Create "Успешный ответ."
 // @Failure 400 {object} sharedResponse.Error400 "Не валидный запрос."
 // @Failure 401 {object} sharedResponse.Error401 "Не верное имя пользователя или пароль."
 // @Failure 500 "Ошибка сервера."
 // @securityDefinitions.apikey Authorization
 // @in header
 // @Security Authorization
-func (a *Game) List(c *fiber.Ctx) error {
+func (a *Game) Create(c *fiber.Ctx) error {
 	ctx, cancelCtx := context.WithTimeout(context.Background(), time.Duration(config.Cfg.Fiber.RequestTimeoutMs)*time.Microsecond)
 	defer cancelCtx()
 
-	requetList := request.List{
-		Size: 20,
-	}
-
-	if err := c.QueryParser(&requetList); err != nil {
+	var requetCreate request.Create
+	if err := c.BodyParser(&requetCreate); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(sharedResponse.Error400{
 			Message: "Не валидный запрос.",
 		})
 	}
 
-	if err := validator.Validator.Struct(requetList); err != nil {
+	if err := validator.Validator.Struct(requetCreate); err != nil {
 		fieldErrors := validator.ValidateErr(err)
 
 		return c.Status(fiber.StatusBadRequest).JSON(sharedResponse.Error400{
@@ -47,25 +45,18 @@ func (a *Game) List(c *fiber.Ctx) error {
 		})
 	}
 
-	modelGames, total, err := a.GameService.GetList(ctx, requetList)
+	userId := c.Locals("userId").(primitive.ObjectID)
+	modelGame, err := a.GameService.Create(ctx, userId, requetCreate)
 	if err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	}
 
-	var responseGames []response.Game
-	for _, modelGame := range modelGames {
-		responseGames = append(responseGames, response.Game{
-			Id:           modelGame.Id,
-			Status:       modelGame.Status,
-			Name:         modelGame.Name,
-			CountPlayers: len(modelGame.Users),
-			MaxPlayers:   modelGame.MaxPlayers,
-			WithPassword: modelGame.Password != nil,
-		})
-	}
-
-	return c.JSON(response.List{
-		Total: total,
-		Games: responseGames,
+	return c.JSON(response.Create{
+		Id:         modelGame.Id,
+		Status:     modelGame.Status,
+		Name:       modelGame.Name,
+		Password:   modelGame.Password,
+		Users:      modelGame.Users,
+		MaxPlayers: modelGame.MaxPlayers,
 	})
 }
