# internal/module/game/response/game_list.go
@@ -1,6 +1,0 @@
-package response
-
-type GameList struct {
-	Total int64  `json:"total" example:"100"`
-	Games []Game `json:"games"`
-}
