# internal/module/game/router/game.go
@@ -2,7 +2,8 @@ package router
 
 import (
 	"github.com/Brotiger/per-painted_poker-backend/internal/module/game/handler"
-	"github.com/Brotiger/per-painted_poker-backend/internal/shared/middleware"
+	"github.com/Brotiger/per-painted_poker-backend/internal/module/game/middleware"
+	sharedMiddleware "github.com/Brotiger/per-painted_poker-backend/internal/shared/middleware"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -10,8 +11,8 @@ func SetupAuthRouter(router fiber.Router) fiber.Router {
 	gameHandler := handler.NewGame()
 	router = router.Group("/game")
 
-	router.Use(middleware.Token)
-	router.Get("/list", gameHandler.List)
+	router.Use(sharedMiddleware.Token, middleware.AlreadyHasGame)
+	router.Get("/", gameHandler.List)
 
 	return router
 }
